Fix styling and out of bounds

--- a/css/snake.css
+++ b/css/snake.css
@@ -12,40 +12,74 @@ ul {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Press Start 2P', cursive;
   text-align: center;
   font-weight: bold;
+  background-color: rgb(137, 193, 17);
 }
 
 h1 {
-  font-size: 60px;
-  margin: 30px;
+  font-size: 40px;
+  padding-bottom: 35px;
+  margin: 15px auto;
+  width: 410px;
+  border-bottom: 5px solid rgb(22, 28, 10);
+}
+
+.paused {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 410px;
+  height: 410px;
+  font-size: 50px;
+  padding-top: 150px;
+}
+
+.game-over {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 410px;
+  height: 410px;
+  font-size: 50px;
+  padding-top: 150px;
+}
+
+.paused-hidden {
+  display: none;
+}
+
+.game-over-hidden {
+  display: none;
+}
+
+.figure-container {
+  width: 410px;
+  height: 410px;
+  position: relative;
+  margin: auto;
 }
 
 figure {
   display: inline-block;
-  border: 3px solid black;
-  width: 250px;
-  height: 250px;
-}
-
-ul:after {
-  content: "";
-  clear: both;
-  display: block;
+  border: 5px solid rgb(22, 28, 10);
 }
 
 li {
   display: block;
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
   box-sizing: border-box;
 }
 
 .apple {
   background-color: red;
+  border-radius: 4px;
 }
 
 .snake {
-  background-color: green;
+  background-color: rgb(22, 28, 10);
+  border: 1px solid rgb(137, 193, 17);
+  border-radius: 2px;
 }
